<resources>
    <string name="app_name">Blog</string>
    <string name="email_hint">Add Your Email Here</string>
    <string name="pass_hint">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="login_reg_btn_text">Need an Account?</string>
    <string name="login_logo_desc">Logo Login Page</string>
    <string name="menu_search">Search</string>
    <string name="menu_account_settings">Account Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="reg_logo_desc">Register Logo Page</string>
    <string name="reg_confirm_pass_text">Confirm Password</string>
    <string name="already_have_account">Already have Account?</string>
    <string name="add_name_text">Name</string>
    <string name="save_profile_button">Save Profile</string>
    <string name="new_post_btn_hint">Add</string>
    <string name="post_desc_hint">Write Post</string>
    <string name="home_bottom">Home</string>
    <string name="notification_bottom">Notification</string>
    <string name="account_bottom">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">Home fragment fragment</string>
    <string name="noti_fragment">Notification fragment</string>
    <string name="acc_fragment">Account fragment</string>
    <string name="profile_image">ProfileImage</string>
</resources>
